--- a/index.html
+++ b/index.html
@@ -174,6 +174,28 @@
           <p class="contact-text">
             I'm currently looking to join a cross-functional team that values improving people's lives through accessible design. Have a project in mind? Let's connect.
           </p>
+          
+          <!-- Contact Form -->
+          <form class="contact-form" id="contactForm">
+            <div class="form-group">
+              <input type="text" id="name" name="name" class="form-input" placeholder="Your Name" required>
+            </div>
+            <div class="form-group">
+              <input type="email" id="email" name="email" class="form-input" placeholder="Your Email" required>
+            </div>
+            <div class="form-group">
+              <input type="text" id="subject" name="subject" class="form-input" placeholder="Subject" required>
+            </div>
+            <div class="form-group">
+              <textarea id="message" name="message" class="form-textarea" placeholder="Your Message" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="form-submit-btn">Send Message</button>
+          </form>
+
+          <div class="contact-divider">
+            <span>OR REACH ME AT</span>
+          </div>
+
           <a href="mailto:silmiyushini1919@gmail.com" class="email-link">silmiyushini1919@gmail.com</a>
           <div class="social-links-footer">
             <a href="https://linkedin.com/in/silmiyushini" target="_blank" class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
