--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Loading Screen -->
+    <div id="loadingScreen" class="loading-screen">
+      <div class="loader-container">
+        <div class="loader-circle">
+          <div class="loader-inner"></div>
+        </div>
+        <div class="loader-text">
+          <h2 class="loading-name">SILMI YUSHINI</h2>
+          <p class="loading-subtitle">Loading Portfolio...</p>
+          <div class="loading-bar">
+            <div class="loading-progress" id="loadingProgress"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="main-container">
       <!-- Header Navigation -->
       <header class="header">
@@ -18,6 +34,7 @@
           <a href="#about" class="nav-link">About Me</a>
           <a href="#experience" class="nav-link">Experience</a>
           <a href="#project" class="nav-link">Projects</a>
+          <a href="#dokumentasi" class="nav-link">Dokumentasi</a>
           <a href="#contact" class="nav-link">Contact</a>
         </nav>
       </header>
@@ -163,6 +180,107 @@
               </div>
             </div>
 
+          </div>
+        </div>
+      </section>
+
+      <!-- Documentation Section -->
+      <section id="dokumentasi" class="dokumentasi-section">
+        <div class="section-content">
+          <div class="dokumentasi-header">
+            <svg class="sparkle-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 2L13.5 8.5L20 10L13.5 11.5L12 18L10.5 11.5L4 10L10.5 8.5L12 2Z" fill="white"/>
+              <path d="M19 3L19.5 5.5L22 6L19.5 6.5L19 9L18.5 6.5L16 6L18.5 5.5L19 3Z" fill="white"/>
+            </svg>
+            <h2 class="dokumentasi-title">Dokumentasi</h2>
+            <svg class="tree-icon" width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 2C10 2 8 3 7 5C6 4 5 4 4 5C3 6 3 8 4 9C2 10 2 13 4 14C2 15 2 18 4 19C3 20 3 22 4 23H12H20C21 22 21 20 20 19C22 18 22 15 20 14C22 13 22 10 20 9C21 8 21 6 20 5C19 4 18 4 17 5C16 3 14 2 12 2Z" fill="white"/>
+              <line x1="12" y1="22" x2="12" y2="23" stroke="white" stroke-width="2"/>
+            </svg>
+          </div>
+          <p class="dokumentasi-subtitle">
+            Cuplikan momen LKMM Pra-Dasar, pelatihan dasar untuk mahasiswa baru<br>
+            Informatika dalam mengasah kepemimpinan dan keterampilan organisasi.
+          </p>
+          
+          <div class="dokumentasi-gallery">
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250814080335.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250814094016.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250814103342.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250814103344.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250815143445.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250815143508.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250815143540.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250819112438.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250819112443.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250819133208.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250819133213.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250819170521.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250819170524.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250820135236.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250820135247.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250820152013.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250821090442.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250821121738.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250822100734.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250822100743.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250822105211.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250822151803.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250822151813.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250825092218.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250826134941.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250828075422.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250828101424.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250828101448.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250903075223.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250908113304.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250908115536.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250909110423.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250910085417.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250925070119.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250925151518.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250926151943.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250930084618.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20250930132523.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251002133641.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251007081633.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251111090858.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251112062104.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251118083304.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251118092126.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251118094712.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251118094713.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251118162538.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251120152812.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251205094254.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251205103959.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251205140609.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251205161418.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251208152838.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251208152847.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251208153403.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG20251208153408.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20250930_071754_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251023_102531_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251030_135044_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251112_093309_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251112_093314_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251112_093442_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251124_083915_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251125_093623_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251125_093626_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251204_092026_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251204_094928_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251209_102621_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/20251209_113840_danscame.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG-20250812-WA0022.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG-20250812-WA0023.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG-20251209-WA0026.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG-20251209-WA0027.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG-20251209-WA0028.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG-20251209-WA0029.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/IMG_20251030_131958.jpg')"></div>
+            <div class="dok-image" style="background-image: url('dokumentasimagang/Screenshot_2025-11-18-12-49-00-32_6012fa4d4ddec268fc5c7112cbb265e7.jpg')"></div>
           </div>
         </div>
       </section>
